FIX:「開店中」などのステータスのタグのz-indexがaリンクより高い

--- a/src/css/izakaya.css
+++ b/src/css/izakaya.css
@@ -67,6 +67,7 @@ section#section {
   font-size: 6vw;
   font-weight: 900;
   z-index: 10;
+  pointer-events: none;
 }
 
 .display-status-close {
